feat: Add Zephyr config for flaot printing

--- a/prj.conf
+++ b/prj.conf
@@ -12,3 +12,12 @@ CONFIG_BT_DEBUG_LOG=y
 CONFIG_I2C=y
 CONFIG_SENSOR=y
 CONFIG_BME280=y
+
+# For printing floating point values.
+CONFIG_NEWLIB_LIBC=y 
+CONFIG_CBPRINTF_FP_SUPPORT=y
+CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
+
+
+CONFIG_ASSERT=y
+CONFIG_HEAP_MEM_POOL_SIZE=256
