--- a/prj.conf
+++ b/prj.conf
@@ -1,20 +1,21 @@
+# Logging interface
+CONFIG_LOG=y
+# Bluetooth Interface
 CONFIG_BT=y
 CONFIG_BT_PERIPHERAL=y
+CONFIG_BT_DEVICE_NAME="House Environmental Monitor"
+CONFIG_BT_DEVICE_APPEARANCE=768
 CONFIG_BT_SMP=y
 CONFIG_TINYCRYPT=y
-CONFIG_BT_DEVICE_NAME="House Environmental Monitor"
-CONFIG_BT_DIS=y
-CONFIG_BT_DIS_PNP=n
-CONFIG_BT_BAS=y
-CONFIG_BT_HRS=y
-CONFIG_BT_DEVICE_APPEARANCE=768
+# BT Debugging
 CONFIG_BT_DEBUG_LOG=y
+# Sensor Interface
 CONFIG_I2C=y
 CONFIG_SENSOR=y
 CONFIG_BME280=y
+# Printf Needed
 CONFIG_NEWLIB_LIBC=y 
 CONFIG_CBPRINTF_FP_SUPPORT=y
 CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
-CONFIG_ASSERT=y
+# Heap Size for RTOS
 CONFIG_HEAP_MEM_POOL_SIZE=256
-CONFIG_LOG=y
